--- a/script.ipynb
+++ b/script.ipynb
@@ -2642,7 +2642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Distribusi dari kolom `distance` ini jika dilihat dari nilai skewness dan bentuk dari histogramnya tergolong distribusi **Right-Skewed** walaupun mean dan mediannya berdekatan hal ini mungkin terjadi karena terdapat outlier pada kolom ini. Dari scatter plot juga dapat dilihat bahwa kolom `distance` dan kolom `price` ini memiliki **Positive Correlation** dimana semakin jauh `distance` makan `price` akan semakin besar. \n",
+    "Distribusi dari kolom `distance` ini jika dilihat dari nilai skewness dan bentuk dari histogramnya tergolong distribusi **Right-Skewed** walaupun mean dan mediannya berdekatan hal ini mungkin terjadi karena terdapat outlier pada kolom ini. Dari scatter plot juga dapat dilihat bahwa kolom `distance` dan kolom `price` ini memiliki **Positive Correlation** dimana semakin jauh `distance` maka `price` akan semakin besar. \n",
     "\n",
     "Dari scatter plot juga dapat diketahui bahwa tarif yang ditawarkan oleh **Uber** ini lebih murah dibandingkan **Lyft**."
    ]
