add correlation documentation

--- a/script.ipynb
+++ b/script.ipynb
@@ -5810,6 +5810,13 @@
     "corr = rides.corr()\n",
     "corr.style.background_gradient(cmap='coolwarm')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dari **correlation matrix** diatas, secara statistik kolom `price` hanya memiliki hubungan dengan kolom `distance` dan kolom `surge_multiplier` karena nilai correlation dengan kolom lain mendekati 0. Maka, kolom numerik yang akan dijadikan feature hanya kolom `distance` dan `surge_multiplier`."
+   ]
   }
  ],
  "metadata": {
