--- a/script.ipynb
+++ b/script.ipynb
@@ -7262,6 +7262,332 @@
    "source": [
     "## Model Testing (Inference Data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference = inference.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_num = inference[num_cols]\n",
+    "inference_cat = inference[cat_cols]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_num_scaled = scaler.transform(inference_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_cat_encoded = encoder.transform(inference_cat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference Concat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_final = np.concatenate([inference_num_scaled, inference_cat_encoded.toarray()], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_inf = model.predict(inference_final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12.269444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21.518360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17.857113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.026909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21.532143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>16.786503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>18.130161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>13.915676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4.194271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>21.732159</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   price prediction\n",
+       "0         12.269444\n",
+       "1         21.518360\n",
+       "2         17.857113\n",
+       "3         16.026909\n",
+       "4         21.532143\n",
+       "5         16.786503\n",
+       "6         18.130161\n",
+       "7         13.915676\n",
+       "8          4.194271\n",
+       "9         21.732159"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_inf = pd.DataFrame(y_pred_inf, columns=['price prediction'])\n",
+    "y_pred_inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cab_type</th>\n",
+       "      <th>name</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>surge_multiplier</th>\n",
+       "      <th>price</th>\n",
+       "      <th>price prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lyft</td>\n",
+       "      <td>Lyft</td>\n",
+       "      <td>3.37</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>12.269444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Uber</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>21.518360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uber</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>1.21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>17.857113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Uber</td>\n",
+       "      <td>UberXL</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>16.026909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Uber</td>\n",
+       "      <td>UberXL</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>21.532143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Lyft</td>\n",
+       "      <td>Lux</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>16.786503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Lyft</td>\n",
+       "      <td>Lux Black</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>18.130161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Uber</td>\n",
+       "      <td>UberXL</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>13.915676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Uber</td>\n",
+       "      <td>UberPool</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>4.194271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Uber</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>2.66</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>21.732159</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  cab_type       name  distance  surge_multiplier  price  price prediction\n",
+       "0     Lyft       Lyft      3.37               1.0   10.5         12.269444\n",
+       "1     Uber      Black      2.58               1.0   22.0         21.518360\n",
+       "2     Uber      Black      1.21               1.0   16.0         17.857113\n",
+       "3     Uber     UberXL      2.34               1.0   16.5         16.026909\n",
+       "4     Uber     UberXL      4.40               1.0   24.0         21.532143\n",
+       "5     Lyft        Lux      2.01               1.0   16.5         16.786503\n",
+       "6     Lyft  Lux Black      0.59               1.0   16.5         18.130161\n",
+       "7     Uber     UberXL      1.55               1.0   11.5         13.915676\n",
+       "8     Uber   UberPool      0.49               1.0    6.5          4.194271\n",
+       "9     Uber      Black      2.66               1.0   21.5         21.732159"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([inference, y_pred_inf], axis=1)"
+   ]
   }
  ],
  "metadata": {
