--- a/script.ipynb
+++ b/script.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error"
    ]
   },
   {
@@ -7239,21 +7240,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training\n",
       "Training Score: 0.93\n",
-      "Validation Score: 0.92\n"
+      "Training Mean Absolute Error (MAE): 1.6770747839872047\n",
+      "Training Mean Squared Error (MSE): 5.115159715899861\n",
+      "Validation\n",
+      "Validation Score: 0.92\n",
+      "Validation Mean Absolute Error (MAE): 1.7635800677352178\n",
+      "Validation Mean Squared Error (MSE): 6.623682438572241\n"
      ]
     }
    ],
    "source": [
+    "print('Training')\n",
     "print(f'Training Score: {model.score(X_train, y_train):.2f}')\n",
-    "print(f'Validation Score: {model.score(X_test, y_test):.2f}')"
+    "print(f'Training Mean Absolute Error (MAE): {mean_absolute_error(y_train, model.predict(X_train))}')\n",
+    "print(f'Training Mean Squared Error (MSE): {mean_squared_error(y_train, model.predict(X_train))}')\n",
+    "print('Validation')\n",
+    "print(f'Validation Score: {model.score(X_test, y_test):.2f}')\n",
+    "print(f'Validation Mean Absolute Error (MAE): {mean_absolute_error(y_test, model.predict(X_test))}')\n",
+    "print(f'Validation Mean Squared Error (MSE): {mean_squared_error(y_test, model.predict(X_test))}')"
    ]
   },
   {
