Add two degree polynom

--- a/script copy.ipynb
+++ b/script copy.ipynb
@@ -13545,7 +13545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -13573,7 +13573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13583,7 +13583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -13836,7 +13836,7 @@
        "9            0.0         0.0          0.0       0.0  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13847,7 +13847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13856,7 +13856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13865,7 +13865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -14018,7 +14018,7 @@
        "9         33.050644  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14029,7 +14029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -14042,6 +14042,15 @@
    ],
    "source": [
     "print(f\"Polynomial Inference Mean Absolute Error (MAE): {mean_absolute_error(inference['price'], polypred)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "degree 3 = 1.252402925491333\n",
+    "\n",
+    "degree 2 = 1.2444473266601563"
    ]
   }
  ],
