Add documentation to data encoding

--- a/script copy.ipynb
+++ b/script copy.ipynb
@@ -12472,6 +12472,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada bagian ini akan dilakukan **encoding** atau merubah variable kategori menjadi angka, karena kolom `name` adalah **kategori nominal** (tidak memiliki urutan) maka akan dilakukan encoding menggunakan **OneHotEncoder**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -12491,6 +12498,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mengubah `X_train_cat_encoded` dan `X_test_cat_encoded` menjadi **dataframe**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -12498,6 +12512,13 @@
    "source": [
     "X_train_cat_encoded = pd.DataFrame(X_train_cat_encoded.toarray(), columns=encoder.get_feature_names(cat_cols))\n",
     "X_test_cat_encoded = pd.DataFrame(X_test_cat_encoded.toarray(), columns=encoder.get_feature_names(cat_cols))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`X_train_cat_encoded` setelah dilakukan **encoding**."
    ]
   },
   {
@@ -12650,6 +12671,13 @@
    ],
    "source": [
     "X_train_cat_encoded.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`X_test_cat_encoded` setelah dilakukan **encoding**."
    ]
   },
   {
