Add documentation to concate feature

--- a/script copy.ipynb
+++ b/script copy.ipynb
@@ -12840,6 +12840,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setelah feature numerik dan kategori dipisah untuk dilakukan **Scaling** dan **Encoding**, pada bagian ini akan menggabungkan kembali feature menjadi `X_train` dan `X_test`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -12847,6 +12854,13 @@
    "source": [
     "X_train = pd.concat([X_train_num_scaled, X_train_cat_encoded], axis=1)\n",
     "X_test = pd.concat([X_test_num_scaled, X_test_cat_encoded], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bentuk `X_train` setelah melalui **feature scaling** dan **feature encoding**."
    ]
   },
   {
@@ -13011,6 +13025,13 @@
    ],
    "source": [
     "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bentuk `X_test` setelah melalui **feature scaling** dan **feature encoding**."
    ]
   },
   {
