Add documentation to model evaluation

--- a/script copy.ipynb
+++ b/script copy.ipynb
@@ -13236,6 +13236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sekarang masing-masing model akan dilatih menggunakan `X_train` dan `y_train`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
@@ -13252,48 +13259,8 @@
     }
    ],
    "source": [
-    "model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('polynomialfeatures', PolynomialFeatures()),\n",
-       "                ('linearregression', LinearRegression())])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_poly2.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('polynomialfeatures', PolynomialFeatures(degree=3)),\n",
-       "                ('linearregression', LinearRegression())])"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "model.fit(X_train, y_train)\n",
+    "model_poly2.fit(X_train, y_train)\n",
     "model_poly3.fit(X_train, y_train)"
    ]
   },
@@ -13305,84 +13272,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada bagian akan dilakukan evaluasi untuk melihat performa dengan menggunakan $R^2 Score$ dan $Mean Absolute Error$ (MAE) dari masing-masing model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ordinary Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----Training----\n",
+      "----Training Set----\n",
       "Training Score: 0.93\n",
       "Training Mean Absolute Error (MAE): 1.6769109567038787\n",
-      "----Validation----\n",
+      "----Testing Set----\n",
       "Validation Score: 0.92\n",
       "Validation Mean Absolute Error (MAE): 1.7665305132071432\n"
      ]
     }
    ],
    "source": [
-    "print('----Training----')\n",
+    "print('----Training Set----')\n",
     "print(f'Training Score: {model.score(X_train, y_train):.2f}')\n",
     "print(f'Training Mean Absolute Error (MAE): {mean_absolute_error(y_train, model.predict(X_train))}')\n",
-    "print('----Validation----')\n",
+    "print('----Testing Set----')\n",
     "print(f'Validation Score: {model.score(X_test, y_test):.2f}')\n",
     "print(f'Validation Mean Absolute Error (MAE): {mean_absolute_error(y_test, model.predict(X_test))}')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Polynomial Features 2-Degree Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----Training----\n",
+      "----Training Set----\n",
       "Training Score: 0.96\n",
       "Training Mean Absolute Error (MAE): 1.2646860577366725\n",
-      "----Validation----\n",
+      "----Testing Set----\n",
       "Validation Score: 0.96\n",
       "Validation Mean Absolute Error (MAE): 1.3088186647253957\n"
      ]
     }
    ],
    "source": [
-    "print('----Training----')\n",
+    "print('----Training Set----')\n",
     "print(f'Training Score: {model_poly2.score(X_train, y_train):.2f}')\n",
     "print(f'Training Mean Absolute Error (MAE): {mean_absolute_error(y_train, model_poly2.predict(X_train))}')\n",
-    "print('----Validation----')\n",
+    "print('----Testing Set----')\n",
     "print(f'Validation Score: {model_poly2.score(X_test, y_test):.2f}')\n",
     "print(f'Validation Mean Absolute Error (MAE): {mean_absolute_error(y_test, model_poly2.predict(X_test))}')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Polynomial Features 3-Degree Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----Training----\n",
+      "----Training Set----\n",
       "Training Score: 0.96\n",
       "Training Mean Absolute Error (MAE): 1.2296354194591457\n",
-      "----Validation----\n",
+      "----Validation Set----\n",
       "Validation Score: 0.96\n",
       "Validation Mean Absolute Error (MAE): 1.2832420186218394\n"
      ]
     }
    ],
    "source": [
-    "print('----Training----')\n",
+    "print('----Training Set----')\n",
     "print(f'Training Score: {model_poly3.score(X_train, y_train):.2f}')\n",
     "print(f'Training Mean Absolute Error (MAE): {mean_absolute_error(y_train, model_poly3.predict(X_train))}')\n",
-    "print('----Validation----')\n",
+    "print('----Validation Set----')\n",
     "print(f'Validation Score: {model_poly3.score(X_test, y_test):.2f}')\n",
     "print(f'Validation Mean Absolute Error (MAE): {mean_absolute_error(y_test, model_poly3.predict(X_test))}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dari hasil evaluasi dengan 3 model diatas, didapatkan model dengan score tertinggi adalah model yang menggunakan **Polynomial Features 3-Degree Linear Regression** dimana pada training setnya mendapat **R2 Score 0.96** dengan **MAE 1.2296** dan pada validation setnya mendapat **R2 score 0.96** dengan **MAE 1.2832.**"
    ]
   },
   {
@@ -13394,7 +13396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13403,7 +13405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13420,7 +13422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13436,7 +13438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13452,7 +13454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13468,7 +13470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13479,7 +13481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -13503,7 +13505,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>price prediction</th>\n",
+       "      <th>LG</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -13552,32 +13554,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   price prediction\n",
-       "0         11.117104\n",
-       "1         14.095690\n",
-       "2          8.590248\n",
-       "3         28.425169\n",
-       "4         11.024267\n",
-       "5         34.079126\n",
-       "6         17.494581\n",
-       "7         23.087332\n",
-       "8          6.879089\n",
-       "9         33.050644"
+       "          LG\n",
+       "0  11.117104\n",
+       "1  14.095690\n",
+       "2   8.590248\n",
+       "3  28.425169\n",
+       "4  11.024267\n",
+       "5  34.079126\n",
+       "6  17.494581\n",
+       "7  23.087332\n",
+       "8   6.879089\n",
+       "9  33.050644"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred_inf = pd.DataFrame(y_pred_inf, columns=['price prediction LG'])\n",
+    "y_pred_inf = pd.DataFrame(y_pred_inf, columns=['LG'])\n",
     "y_pred_inf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -13601,7 +13603,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>price prediction Poly 2</th>\n",
+       "      <th>Poly2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -13650,32 +13652,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   price prediction Poly 2\n",
-       "0                 8.401581\n",
-       "1                13.917725\n",
-       "2                 9.089310\n",
-       "3                28.106171\n",
-       "4                 9.749786\n",
-       "5                35.492859\n",
-       "6                12.691193\n",
-       "7                23.441559\n",
-       "8                 8.119781\n",
-       "9                33.748627"
+       "       Poly2\n",
+       "0   8.401581\n",
+       "1  13.917725\n",
+       "2   9.089310\n",
+       "3  28.106171\n",
+       "4   9.749786\n",
+       "5  35.492859\n",
+       "6  12.691193\n",
+       "7  23.441559\n",
+       "8   8.119781\n",
+       "9  33.748627"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred_inf_poly2 = pd.DataFrame(y_pred_inf_poly2, columns=['price prediction Poly 2'])\n",
+    "y_pred_inf_poly2 = pd.DataFrame(y_pred_inf_poly2, columns=['Poly2'])\n",
     "y_pred_inf_poly2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -13699,7 +13701,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>price prediction Poly 3</th>\n",
+       "      <th>Poly3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -13748,32 +13750,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   price prediction Poly 3\n",
-       "0                 8.386946\n",
-       "1                13.796480\n",
-       "2                 8.904090\n",
-       "3                27.786915\n",
-       "4                 9.899308\n",
-       "5                35.615838\n",
-       "6                12.822594\n",
-       "7                23.166249\n",
-       "8                 8.059999\n",
-       "9                33.737837"
+       "       Poly3\n",
+       "0   8.386946\n",
+       "1  13.796480\n",
+       "2   8.904090\n",
+       "3  27.786915\n",
+       "4   9.899308\n",
+       "5  35.615838\n",
+       "6  12.822594\n",
+       "7  23.166249\n",
+       "8   8.059999\n",
+       "9  33.737837"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred_inf_poly3 = pd.DataFrame(y_pred_inf_poly3, columns=['price prediction Poly 3'])\n",
+    "y_pred_inf_poly3 = pd.DataFrame(y_pred_inf_poly3, columns=['Poly3'])\n",
     "y_pred_inf_poly3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -13801,9 +13803,9 @@
        "      <th>distance</th>\n",
        "      <th>surge_multiplier</th>\n",
        "      <th>price</th>\n",
-       "      <th>price prediction</th>\n",
-       "      <th>price prediction Poly 2</th>\n",
-       "      <th>price prediction Poly 3</th>\n",
+       "      <th>LG</th>\n",
+       "      <th>Poly2</th>\n",
+       "      <th>Poly3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -13912,32 +13914,32 @@
        "</div>"
       ],
       "text/plain": [
-       "           name  distance  surge_multiplier  price  price prediction  \\\n",
-       "0        Shared      4.09               1.0    9.0         11.117104   \n",
-       "1        UberXL      1.61               1.0   14.0         14.095690   \n",
-       "2         UberX      1.75               1.0   10.0          8.590248   \n",
-       "3     Black SUV      1.57               1.0   27.5         28.425169   \n",
-       "4      UberPool      3.04               1.0    7.5         11.024267   \n",
-       "5  Lux Black XL      3.32               1.0   34.0         34.079126   \n",
-       "6      UberPool      5.46               1.0   11.0         17.494581   \n",
-       "7     Lux Black      2.45               1.0   22.5         23.087332   \n",
-       "8         UberX      1.11               1.0    7.5          6.879089   \n",
-       "9     Black SUV      3.30               1.0   37.0         33.050644   \n",
+       "           name  distance  surge_multiplier  price         LG      Poly2  \\\n",
+       "0        Shared      4.09               1.0    9.0  11.117104   8.401581   \n",
+       "1        UberXL      1.61               1.0   14.0  14.095690  13.917725   \n",
+       "2         UberX      1.75               1.0   10.0   8.590248   9.089310   \n",
+       "3     Black SUV      1.57               1.0   27.5  28.425169  28.106171   \n",
+       "4      UberPool      3.04               1.0    7.5  11.024267   9.749786   \n",
+       "5  Lux Black XL      3.32               1.0   34.0  34.079126  35.492859   \n",
+       "6      UberPool      5.46               1.0   11.0  17.494581  12.691193   \n",
+       "7     Lux Black      2.45               1.0   22.5  23.087332  23.441559   \n",
+       "8         UberX      1.11               1.0    7.5   6.879089   8.119781   \n",
+       "9     Black SUV      3.30               1.0   37.0  33.050644  33.748627   \n",
        "\n",
-       "   price prediction Poly 2  price prediction Poly 3  \n",
-       "0                 8.401581                 8.386946  \n",
-       "1                13.917725                13.796480  \n",
-       "2                 9.089310                 8.904090  \n",
-       "3                28.106171                27.786915  \n",
-       "4                 9.749786                 9.899308  \n",
-       "5                35.492859                35.615838  \n",
-       "6                12.691193                12.822594  \n",
-       "7                23.441559                23.166249  \n",
-       "8                 8.119781                 8.059999  \n",
-       "9                33.748627                33.737837  "
+       "       Poly3  \n",
+       "0   8.386946  \n",
+       "1  13.796480  \n",
+       "2   8.904090  \n",
+       "3  27.786915  \n",
+       "4   9.899308  \n",
+       "5  35.615838  \n",
+       "6  12.822594  \n",
+       "7  23.166249  \n",
+       "8   8.059999  \n",
+       "9  33.737837  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13948,7 +13950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -13967,7 +13969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -13986,7 +13988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
